# pair-programming

./: README.md
api/: main.py  pyproject.toml
api/src/api/: db.py  deps.py  models.py  repo.py  schemas.py
api/src/api/routers/: autocomplete.py  rooms.py  ws.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css  index.tsx  store.ts
ui/src/components/: CodeEditor.tsx
ui/src/features/editor/: editorSlice.ts
ui/src/hooks/: useRedux.ts  useRoomWebSocket.ts
ui/src/pages/: HomePage.tsx  RoomPage.tsx
